tests/error/effects_errors/misnamed_effects.err
Error: Invalid annotation (at $FILE:7:36)
  | 
5 | 
6 | @guppy.declare
7 | def foo() -> Callable[[int], int] @ effects(ALL):
  |                                     ^^^^^^^^^^^^ Not a valid effect: `ALL`

Guppy compilation failed due to 1 previous error
